# pdstrut

./: .gitignore  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
sources/: CMakeLists.txt
sources/libpdstrut/: CMakeLists.txt
sources/libpdstrut/include/pd/strut/: char_type.hpp  convert.hpp  strut.hpp  transform.hpp
sources/libpdstrut/src/pd/strut/: char_type.cpp  convert.cpp  strut.cpp
sources/libpdstrut/ut/: CMakeLists.txt  pdstrut_tests.cpp
